--- a/style.css
+++ b/style.css
@@ -10,9 +10,36 @@
     height: 100vh;
     font-family: "Roboto", sans-serif;
     background-color: #333;
-    color:white; 
+    color:white; }
 
-   }
+    p {
+
+        color: gold;
+text-shadow: 5px 5px 5px #000;
+    }
+    
+/* 
+    a {
+
+        color: white;
+        text-decoration:none
+    }
+
+    .small {
+
+        text-transform: uppercase;
+    }
+
+    .big {
+
+        text-transform: lowercase;
+    }
+
+    .text {
+
+        text-transform: capitalize;
+    } */
+
 
 
 
