--- a/style.css
+++ b/style.css
@@ -1,52 +1,28 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-   }
-     
-   body {
-    margin: 20px;
-    font-size: 36px;
-    height: 100vh;
-    font-family: "Roboto", sans-serif;
-    background-color: #333;
-    color:white; }
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
 
-    p {
+body {
 
-        color: gold;
-text-shadow: 5px 5px 5px #000;
-    }
-    
-/* 
-    a {
-
-        color: white;
-        text-decoration:none
-    }
-
-    .small {
-
-        text-transform: uppercase;
-    }
-
-    .big {
-
-        text-transform: lowercase;
-    }
-
-    .text {
-
-        text-transform: capitalize;
-    } */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
 
+	margin: 20px;
+	font-size: 36px;
+	height: 100vh;
+	font-family: "Roboto", sans-serif;
+	background-color: #333;
+	color: white;
+	overflow: hidden;
+}
 
+div {
 
-
-
-
-
-
-
-   
+    width: 500px;
+    height: 500px;
+    background-color: rgb(300, 50, 90)
+}
