--- a/style.css
+++ b/style.css
@@ -4,41 +4,16 @@
 	padding: 0;
 }
 body {
+	margin: 50px;
 	font-family: "Roboto", sans-serif;
 	color: #fff;
-	background: color #333;
+	background-color: #333;
+	font-size: 36px;
+}
+hr {
+	margin: 36px 0;
 }
 
-.box-1 {
-	height: 400px;
-	width: 400px;
-	background-color: gold;
-}
-
-.circle {
-	height: 300px;
-	width: 300px;
-	background-color: rgba(255, 0, 0, 0.3);
-	border-radius: 50%;
-}
-
-.box-2 {
-max-width: 800px;
-min-width: 500px;
-width: 100%;
-height: 200px;
-background-color: lime;
-}
-
-.box-3 {
-	width: 50vw;
-	height: 300px;
-	background-color: tomato;
-}
-
-.inside {
-
-	width: 50%;
-	height:50vw;
-	background-color:  #0076e8;
+div ~ p {
+	color: lime;
 }
