--- a/style.css
+++ b/style.css
@@ -1,34 +1,30 @@
 * {
-	box-sizing: border-box;
+	/* box-sizing: border-box; */
 	margin: 0;
 	padding: 0;
 }
+
 body {
-	margin: 50px;
+	/* margin: 50px; */
 	font-family: "Roboto", sans-serif;
-	color: #fff;
+
 	background-color: #333;
 	font-size: 36px;
 }
 
-div p {
-
-	color: tomato;
+.square {
+	width: 300px;
+	height: 300px;
+	padding: 20px;
+	border: 10px solid black;
+	margin: 20px;
+}
+.content {
+	background-color: royalblue;
+	box-sizing: content-box;
 }
 
-.child > p  {
-
-	font-weight: bold;
-	text-decoration: line-through;
-}
-
-#test ~ div {
-
-	background-color:royalblue;
-
-}
-
-main + p {
-
-	text-transform: uppercase;
+.border {
+	background-color: lime;
+	box-sizing: border-box;
 }
