--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-	/* box-sizing: border-box; */
+	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
 }
@@ -7,24 +7,32 @@
 body {
 	/* margin: 50px; */
 	font-family: "Roboto", sans-serif;
-
-	background-color: #333;
+ background-color: #333;
 	font-size: 36px;
 }
 
 .square {
+	display: inline-block;
 	width: 300px;
 	height: 300px;
-	padding: 20px;
 	border: 10px solid black;
-	margin: 20px;
+	margin: 30px;
+
+
+	padding: 20px;
+
+	padding: 20px 30px;
+
+	padding: 20px 30px 40px;
+
+	padding: 20px 30px 40px 50px;
 }
 .content {
-	background-color: royalblue;
-	box-sizing: content-box;
+	background-color: royalblue; 
+
 }
 
 .border {
 	background-color: lime;
-	box-sizing: border-box;
+
 }
