--- a/style.css
+++ b/style.css
@@ -12,27 +12,37 @@ body {
 }
 
 .square {
-	display: inline-block;
-	width: 300px;
-	height: 300px;
-	border: 10px solid black;
-	margin: 30px;
 
+	padding: 80px 40px 15px 5px;
 
-	padding: 20px;
+	padding: 10px;
 
-	padding: 20px 30px;
+	margin: 20px 30px 40px 30px;
 
-	padding: 20px 30px 40px;
+	margin: 100px 50px;
 
-	padding: 20px 30px 40px 50px;
+	padding-top: 20px;
+	padding-right: 30px;
+	padding-bottom: 40px;
+	padding-left: 50px;
+
+	padding-top: 20px;
+	padding-right: 30px;
+	padding-bottom: 50px;
+	padding-left:  30px;
+
+	margin-top: 20px;
+	margin-right: 20px;
+	margin-bottom: 20px;
+	margin-left: 20px;
+
+	padding-top: 20px;
+	padding-right: 40px;
+	padding-bottom: 20px;
+	padding-left: 40px;
+
 }
-.content {
-	background-color: royalblue; 
 
-}
 
-.border {
-	background-color: lime;
 
-}
+
