--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-	/* margin: 50px; */
+	margin: 50px;
 	font-family: "Roboto", sans-serif;
  background-color: #333;
 	font-size: 36px;
@@ -13,34 +13,13 @@ body {
 
 .square {
 
-	padding: 80px 40px 15px 5px;
+	width: 600px;
+	height: 300px;
+	background-color: royalblue;
 
-	padding: 10px;
-
-	margin: 20px 30px 40px 30px;
-
-	margin: 100px 50px;
-
-	padding-top: 20px;
-	padding-right: 30px;
-	padding-bottom: 40px;
-	padding-left: 50px;
-
-	padding-top: 20px;
-	padding-right: 30px;
-	padding-bottom: 50px;
-	padding-left:  30px;
-
-	margin-top: 20px;
-	margin-right: 20px;
-	margin-bottom: 20px;
-	margin-left: 20px;
-
-	padding-top: 20px;
-	padding-right: 40px;
-	padding-bottom: 20px;
-	padding-left: 40px;
-
+	/* border: 10px solid gold; */
+	 border-top-left-radius: 30px;
+	 border-bottom-right-radius: 30px;
 }
 
 
