--- a/style.css
+++ b/style.css
@@ -11,10 +11,19 @@ body {
 	font-size: 36px;
 }
 
-a {
-	color: white;
+.btn {
 
-	text-decoration: none;
+	padding: 10px 20px; 
+	background-color: tomato;
+	border: none;
+	border-radius: 6px;
+	cursor: pointer;
+	transition: .3s;
 }
 
+.btn:hover {
 
+	background-color: gold;
+	box-shadow:0 0 5px gold;
+
+}
