--- a/style.css
+++ b/style.css
@@ -7,23 +7,39 @@
 body {
 	margin: 50px;
 	font-family: "Roboto", sans-serif;
- background-color: #333;
+	background-color: #333;
+	color: white;
 	font-size: 36px;
 }
 
-.btn {
-
-	padding: 10px 20px; 
-	background-color: tomato;
-	border: none;
-	border-radius: 6px;
-	cursor: pointer;
-	transition: .3s;
+div {
+	margin: 0 auto;
+	height: 200px;
+	width: 600px;
+	border: 3px solid black;
 }
 
-.btn:hover {
+.red {
+	margin-top: 200px;
+	left:100px;
+	background-color: tomato;
+	position: relative;
+	z-index: 100; 
+}
 
-	background-color: gold;
-	box-shadow:0 0 5px gold;
+.blue {
+	margin: 20px auto;
+	background-color: royalblue;
+	position: relative;
+	top: -100px; 
+	left: 60px; 
+	z-index: 101; 
+	
+}
 
+.green {
+	background-color: greenyellow;
+	position: relative;
+	top: -200px;
+	z-index:102;
 }
