--- a/style.css
+++ b/style.css
@@ -5,43 +5,63 @@
 }
 
 body {
-	margin: 50px;
+	
 	font-family: "Roboto", sans-serif;
 	background-color: #333;
 	color: white;
 	font-size: 36px;
 }
 
-main {
+section {
+	position: relative;
 	margin-top: 200px;
+	margin-bottom: 50px;
+	height: 300px;
+	background-color: #ddd;
 }
 
 div {
-	margin: 0 auto;
-	height: 200px;
-	width: 600px;
+	height: 100px;
+	width: 100px;
 	border: 3px solid black;
 }
 
 .red {
+	position: absolute;
+	top: 0;
+	left: 0;
 	background-color: tomato;
 }
 
 .blue {
-	position: relative;
-	margin: 20px auto;
+	position: absolute;
 	background-color: royalblue;
+	top: 0;
+	left: 100px;
 }
 
 .green {
+	position: absolute;
+	top: 0;
+	left: 200px;
 	background-color: greenyellow;
 }
 
 .gold {
 	position: absolute;
-	left: 477px; 
-	margin: 0;
-	width: 120px;
-	height: 120px;
+	bottom: 0;
+	right: 0;
 	background-color: gold;
+}
+
+.silver {
+	position: absolute;
+	top: 100px;
+	right: 0;
+	background-color: silver;
+}
+
+.black {
+	display: inline-block;
+	background-color: black;
 }
