--- a/style.css
+++ b/style.css
@@ -5,63 +5,68 @@
 }
 
 body {
-	
 	font-family: "Roboto", sans-serif;
 	background-color: #333;
 	color: white;
 	font-size: 36px;
 }
 
-section {
-	position: relative;
-	margin-top: 200px;
-	margin-bottom: 50px;
-	height: 300px;
+.bg {
+	width: 100vw;
+	height: 100vh;
 	background-color: #ddd;
+	transition: 0.3s;
 }
 
-div {
-	height: 100px;
-	width: 100px;
+.square {
+	position: absolute;
+	top: 50px;
+	width: 60px;
+	height: 60px;
 	border: 3px solid black;
+	transform: translateX(-50%);
+	cursor: pointer;
 }
 
 .red {
-	position: absolute;
-	top: 0;
-	left: 0;
 	background-color: tomato;
+	left: 40%;
 }
 
 .blue {
-	position: absolute;
 	background-color: royalblue;
-	top: 0;
-	left: 100px;
+	left: 20%;
 }
 
 .green {
-	position: absolute;
-	top: 0;
-	left: 200px;
 	background-color: greenyellow;
+	left: 60%;
 }
 
 .gold {
-	position: absolute;
-	bottom: 0;
-	right: 0;
 	background-color: gold;
+	left: 80%;
 }
 
-.silver {
-	position: absolute;
-	top: 100px;
-	right: 0;
-	background-color: silver;
+.red:hover ~ .bg {
+
+	background-color: tomato;
+
 }
 
-.black {
-	display: inline-block;
-	background-color: black;
+.blue:hover ~ .bg {
+
+	background-color: royalblue;
+	
+}
+
+.green:hover ~ .bg {
+
+	background-color: greenyellow;
+	
+}
+
+.gold:hover ~ .bg {
+	background-color: gold;
+	
 }
