--- a/style.css
+++ b/style.css
@@ -19,13 +19,33 @@ body {
 .square {
 	width: 200px;
 	height: 200px;
-	background-color: #5b8bf3;
-	border: 2px solid rgb(13, 66, 223);
-	box-shadow: 0 0 15px #5b8bf3;
 	border-radius: 25px;
-	transition: 0.5s;
+	border: 3px solid #fff;
 }
 
-.skew:hover {
-	transform: skew(45deg);
+.square2 {
+	position: absolute;
+	width: 200px;
+	height: 200px;
+	border-radius: 25px;
+	background-color: #4e5ffe;
+	transition: 0.3s;
+
+	transform-origin: 50% 50%;
+	
+}
+
+.square2:hover {
+	transform: rotate(45deg);
+}
+
+.dot {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 10px;
+	height: 10px;
+	border-radius: 50%;
+	background-color: #000;
 }
