--- a/style.css
+++ b/style.css
@@ -7,23 +7,87 @@
 body {
 	font-family: "Nunito" "sans-serif";
 	background-color: #333;
-	font-size: 24px;
-	color: #fff;
 }
 
-.square {
+div {
+	border: 2px solid black;
+	text-align: center;
+	line-height:  60px;
+}
+
+.long {
 	position: absolute;
-	height: 200px;
-	width: 200px;
+	top: 50px;
+	left: calc(50% - 400px);
+	width: 800px;
+	height: 60px;
+	background-color: tomato;
+	transition: 0.3s;
+}
+
+.long:hover {
+	transform: scale(2);
+	width: 400px;
+	left: calc(50% - 200px);
+	background-color: orange;
+}
+
+.short {
+	position: absolute;
+	top: 180px;
+	left: calc(50% - 150px);
+	width: 300px;
+	height: 60px;
 	border-radius: 25px;
-	background-color: rgb(69, 112, 243);
+	background-color: royalblue;
+	transition: 1s linear;
+}
 
-	top: calc(50% - 100px);
-	left: calc(50% - 100px);
+.short:hover {
+	transform: rotate(360deg);
+}
 
+.short2 {
+	position: absolute;
+	top: 300px;
+	width: 300px;
+	height: 60px;
+	left: calc(30% - 150px);
+	background-color: gold;
+	border-radius: 10px;
+	transition: 1s 1s ease-out;
+}
 
-	
-	/* transform: translate(-50%, -50%);
+.short3 {
+	position: absolute;
+	top: 300px;
+	width: 300px;
+	height: 60px;
+	left: calc(70% - 150px);
+	background-color: greenyellow;
+	border-radius: 10px;
+	transition: 1s 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.short:hover ~ .short2 {
+	transform: rotate(360deg);
+}
+
+.short:hover ~ .short3 {
+	transform: rotate(-360deg);
+}
+
+.center {
+	position: absolute;
 	top: 50%;
-	left: 50%; */
-} */
+	left: 50%;
+	transform: translate(-50%, 50%);
+	height: 200px;
+	width: 400px;
+	transition: .3s;
+	line-height: 200px;
+}
+
+.center:hover {
+	background-color: #fff;
+}
