--- a/style.css
+++ b/style.css
@@ -9,86 +9,33 @@ body {
 	background-color: #333;
 }
 
-div {
-	border: 2px solid black;
-	text-align: center;
-	line-height: 60px;
-}
-
-.long {
-	position: absolute;
-	left: calc(50% - 400px);
-	top: 50px;
-	height: 60px;
-	width: 800px;
-	background-color: tomato;
-	transition: transform 0.3s, width 0.3s;
-}
-
-.long:hover {
-	transform: scale(2);
-	width: 400px;
-	left: calc(50% - 200px);
-	background-color: rgb(254, 129, 107);
-}
-
-.short-size {
-	position: absolute;
+.square {
 	width: 300px;
-	height: 60px;
-}
-.short {
-	top: 180px;
-	left: calc(50% - 150px);
-	border-radius: 25px;
-	background-color: royalblue;
-	transition: 1s linear;
-}
-
-.short:hover {
-	transform: rotate(360deg);
-}
-
-.short2,
-.short3 {
-	top: 300px;
-	border-radius: 10px;
-}
-
-.short2 {
-	position: absolute;
-
-	left: calc(30% - 150px);
+	height: 300px;
+	top: 100vh;
 	background-color: gold;
-
-	transition: transform 1s 1s ease-out;
 }
 
-.short3 {
-	left: calc(70% - 150px);
-	background-color: yellowgreen;
-
-	transition: transform 1s 1s cubic-bezier(0.19, 1, 0.22, 1);
+@media (min-width: 500px) {
+	.square {
+		background-color: royalblue;
+	}
 }
 
-.short:hover ~ .short2 {
-	transform: rotate(360deg);
+@media (min-width: 700px) {
+	.square {
+		background-color: lime;
+	}
 }
 
-.short:hover ~ .short3 {
-	transform: rotate(-360deg);
+@media (min-width: 550px) and (max-width: 850px) {
+	.square {
+		width: 450px;
+	}
 }
 
-.center {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	line-height: 200px;
-	width: 400px;
-	transition:background-color 0.3s;
-}
-
-.center:hover {
-	background-color: #fff;
+@media (min-width: 800px) {
+	body {
+		background-image: linear-gradient(326deg, #a4508b 0%, #5f0a87 74%);
+	}
 }
